@@ -5,6 +5,18 @@ Revision history for Perl extension MooseX-Getopt
       - refactored &new_with_option some so that 
         this will work better with other Getopt 
         modules (nuffin)
+    
+    + MooseX::Getopt::Strict
+      - version of MooseX::Getopt which requires 
+        you to specify which attributes you want 
+        processed explicity
+        - added tests for this
+    
+    + MooseX::Getopt::Meta::Attribute::NoGetopt
+      - a custom meta-attribute which can be 
+        used to specify that an attribute should 
+        not be processed
+        - added tests for this
 
 0.05 Tues. July 3, 2007
     * MooseX::Getopt::OptionTypeMap
